--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Section 2: JavaScript Language Basics</title>
+        <title>Section 2: JavaScript Language Basics </title>
+        
     </head>
 
     <body>
         <h1>Section 2: JavaScript Language Basics</h1>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse corporis rem iusto accusantium hic quis, 
+            fugiat recusandae, delectus, reiciendis magnam veniam ullam autem eius quas amet 
+            magni praesentium qui omnis.</p>
     </body>
 
     <script src="script.js"></script>
 </html>
+
